haproxy-glb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-glb
  labels:
    app: haproxy-glb
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: stats
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: haproxy-glb
  type: ClusterIP
